k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: delectable
  labels:
    app.kubernetes.io/name: delectable
